tests/should_fail/terminates/complicated_traits_recursion.stderr
error: Mutually recursive functions: when calling `<i32 as Foo>::foo`...
  --> complicated_traits_recursion.rs:12:5
   |
12 |     fn foo() {
   |     ^^^^^^^^
   |
note: then `<i32 as Foo>::foo` might call `<i32 as Foo>::foo` via the call to `bar`.
  --> complicated_traits_recursion.rs:13:9
   |
13 |         bar::<std::iter::Once<i32>>(std::iter::once(1i32));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

